<resources>
    <string name="app_name">Prego Pizza</string>
    <string name="menu_title">Prego Pizza</string>
    <string name="your_cart">Your Cart</string>

    // MAIN MENU MENU STRINGS //
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>

    // CART STRINGS
    <string name="place_order">Place Order</string>
    <string name="total">Total:</string>
    <string name="_0">€0</string>
    <string name="food_01">Food 01</string>
    <string name="_100000">100000</string>

    // FOOD DESCRIPTION STRINGS - PLACEHOLDERS //
    <string name="food_name">Food Name</string>
    <string name="description">Description</string>
    <string name="_10_00">10.00</string>

    // POPUP BOX ON CART STRINGS //
    <string name="no_don_t">No Don\'t</string>
    <string name="give_me_pizza">Give me Pizza</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="number">Number</string>
    <string name="last_few_step_s">Last Few Step\'s</string>

    // MAIN MENU FOOD STRINGS
    <string name="view">View</string>

    // CART MENU STRINGS //
    <string name="home">Home</string>
    <string name="remove">Clear Cart</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="mainRegButton">Regrister</string>
    <string name="mainLoginButton">Login</string>
    <string name="mainMenu">View Menu</string>
    <string name="loginHeading">Please Login</string>
    <string name="loginPhoneNumber">Phone Number</string>
    <string name="loginPassword">Password</string>
    <string name="login">Login</string>
    <string name="loginCancelButton">Cancel</string>
    <string name="registerHeading">Please Register</string>
    <string name="google_maps_key">AIzaSyCcc_x_Ci1bKb5h8ldEKsTylWhBEuUD7RM</string>
    <string name="title_activity_maps">Map</string>
</resources>
